--- a/Carrossel/hannah - Copy.html
+++ b/Carrossel/hannah - Copy.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>  
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
@@ -218,25 +218,25 @@
       padding: 0 20px;
       margin: 0 auto;
     }
-   #hero .hero-text h1 {
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 700;
-  margin-bottom: 15px;
-  font-size: 2rem;
-  color: #ffffff;
-  background-color: rgba(0, 0, 0, 0.4); /* Fundo preto transparente */
-  padding: 20px;
-  border-radius: 10px;
-}
+    #hero .hero-text h1 {
+      font-family: 'Montserrat', sans-serif;
+      font-weight: 700;
+      margin-bottom: 15px;
+      font-size: 2rem;
+      color: #ffffff;
+      background-color: rgba(0, 0, 0, 0.4); /* Fundo preto transparente */
+      padding: 20px;
+      border-radius: 10px;
+    }
 
-#hero .hero-text p {
-  margin-bottom: 20px;
-  font-size: 1.1rem;
-  color: #ffffff;
-  background-color: rgba(0, 0, 0, 0.4); /* Fundo preto transparente */
-  padding: 10px 20px;
-  border-radius: 8px;
-}
+    #hero .hero-text p {
+      margin-bottom: 20px;
+      font-size: 1.1rem;
+      color: #ffffff;
+      background-color: rgba(0, 0, 0, 0.4); /* Fundo preto transparente */
+      padding: 10px 20px;
+      border-radius: 8px;
+    }
     #hero .hero-text button {
       background-color: var(--primaria);
       color: var(--texto-claro);
@@ -894,7 +894,7 @@
   <!-- CABEÇALHO -->
   <header>
     <div class="logo">
-      <img src="imagens/logo.png" alt="Logotipo Fundação Hannah" />
+      <img src="imagens/logo.gif" alt="Logotipo Fundação Hannah" />
     </div>
 
     <div class="menu-btn" onclick="toggleMenu()">☰</div>
@@ -910,7 +910,7 @@
     </nav>
 
     <div class="cta-header">
-      <button id="nav-doar" onclick="window.location.href='https://hannahenglishcourse.vercel.app/Carrossel/doe.html'">
+      <button id="nav-doar" onclick="window.location.href='https://hannahenglishcourse.netlify.app/Carrossel/doe.html'">
         Doe Agora
       </button>
     </div>
@@ -931,7 +931,7 @@
   </header>
 
   <!-- Botão flutuante (mobile) -->
-  <button class="donate-float-mobile" onclick="window.location.href='https://hannahenglishcourse.vercel.app/Carrossel/doe.html'">
+  <button class="donate-float-mobile" onclick="window.location.href='https://hannahenglishcourse.netlify.app/Carrossel/doe.html'">
     Doe Agora
   </button>
 
@@ -1052,9 +1052,9 @@
           data-title="Blessing Table"
           data-title-pt="Mesa de Bênçãos"
           data-title-en="Blessing Table"
-          data-text="Fornecemos lanches durante a semana para os alunos e refeições completas aos sábados, atendendo necessidades físicas e emocionais."
-          data-text-pt="Fornecemos lanches durante a semana para os alunos e refeições completas aos sábados, atendendo necessidades físicas e emocionais."
-          data-text-en="We provide snacks during the week for students and full meals on Saturdays, meeting physical and emotional needs."
+          data-text="O Mesa de Bênçãos busca demonstrar o amor de Cristo, proporcionando sustento e esperança às famílias mais vulneráveis. Nosso objetivo é levar alívio físico e espiritual, suprindo a fome e compartilhando o Evangelho."
+          data-text-pt="O Mesa de Bênçãos busca demonstrar o amor de Cristo, proporcionando sustento e esperança às famílias mais vulneráveis. Nosso objetivo é levar alívio físico e espiritual, suprindo a fome e compartilhando o Evangelho."
+          data-text-en="Blessing Table seeks to demonstrate Christ’s love by providing sustenance and hope to the most vulnerable families. Our goal is to bring physical and spiritual relief, alleviating hunger and sharing the Gospel."
         >
           <img src="imagens/img2.png" alt="Blessing Table" />
         </div>
@@ -1245,7 +1245,8 @@
       </div>
     </div>
     <div class="impacto-cta">
-      <a href="impacto.html">Conheça mais histórias</a>
+      <!-- BOTÃO "CONHEÇA MAIS HISTÓRIAS" COM ID PARA TRADUÇÃO E FUNÇÃO DE REDIRECIONAMENTO -->
+      <a id="historias-impacto-btn" href="#" onclick="goToImpactPage()"></a>
     </div>
   </section>
 
@@ -1268,24 +1269,28 @@
 
   <!-- NOVA SEÇÃO PARCERIAS E APOIO (ANTES DO RODAPÉ) -->
   <section id="parcerias">
-    <h2 id="parcerias-h2">Parcerias e Apoio</h2>
-    <div class="parcerias-container">
-      <img src="imagens/apoio1.png" alt="Apoio 1">
-      <img src="imagens/apoio2.png" alt="Apoio 2">
-      <img src="imagens/apoio3.png" alt="Apoio 3">
-      <img src="imagens/apoio4.png" alt="Apoio 4">
-    </div>
-  </section>
+  <h2 id="parcerias-h2">Parcerias e Apoio</h2>
+  <div class="parcerias-container">
+    <img src="imagens/apoio1.png" alt="Apoio 1">
+    
+    <!--
+    <img src="imagens/apoio2.png" alt="Apoio 2">
+    <img src="imagens/apoio3.png" alt="Apoio 3">
+    <img src="imagens/apoio4.png" alt="Apoio 4">
+    -->
+    
+  </div>
+</section>
 
   <!-- RODAPÉ -->
   <footer id="footer">
-    <p id="footer-copy">© 2025 Fundação Hannah. Todos os direitos reservados.</p>
+    <p id="footer-copy">© 2025 Missão Hannah. Todos os direitos reservados.</p>
     <div class="social-media">
       <a href="https://facebook.com" target="_blank">Facebook</a> |
       <a href="https://instagram.com" target="_blank">Instagram</a> |
       <a href="https://youtube.com" target="_blank">YouTube</a>
     </div>
-    <p id="footer-info">Endereço: 106/18 moo 13 Piyaporn , Mae Sai District, Chiang Rai Province -Thailand - 57130 | E-mail: thailandhannahfoundation@gmail.com | WhatsApp: +66622634630</p>
+    <p id="footer-info">Endereço: Thailand | E-mail: magdalenoroquette@gmail.com | WhatsApp: +66622634630</p>
   </footer>
 
   <!-- SCRIPTS -->
@@ -1317,8 +1322,8 @@
     /* TRADUÇÕES (PT <-> EN) VIA DICIONÁRIO */
     const translations = {
       "page-title": {
-        pt: "Fundação Hannah",
-        en: "Hannah Foundation"
+        pt: "Missão Hannah",
+        en: "Hannah Mission"
       },
       /* MENU */
       "nav-sobre-nos": { pt: "Sobre Nós", en: "About Us" },
@@ -1438,18 +1443,24 @@
 
       /* RODAPÉ */
       "footer-copy": {
-        pt: "© 2025 Fundação Hannah. Todos os direitos reservados.",
-        en: "© 2025 Hannah Foundation. All rights reserved."
+        pt: "© 2025 Missão Hannah. Todos os direitos reservados.",
+        en: "© 2025 Hannah Mission. All rights reserved."
       },
       "footer-info": {
-        pt: "Endereço: 106/18 moo 13 Piyaporn , Mae Sai District, Chiang Rai Province -Thailand - 57130 | E-mail: thailandhannahfoundation@gmail.com | WhatsApp: +66622634630",
-        en: "Address: 106/18 moo 13 Piyaporn , Mae Sai District, Chiang Rai Province -Thailand - 57130 | Email: thailandhannahfoundation@gmail.com | WhatsApp: +66622634630"
+        pt: "Endereço: Tailândia  | E-mail: magdalenoroquette@gmail.com | WhatsApp: +66622634630",
+        en: "Address: Thailand | Email: magdalenoroquette@gmail.com | WhatsApp: +66622634630"
       },
 
       /* BOTÃO "SAIBA MAIS" NO MODAL */
       "modal-learn-more": {
         pt: "Saiba Mais",
         en: "Learn More"
+      },
+
+      /* BOTÃO "CONHEÇA MAIS HISTÓRIAS" */
+      "historias-impacto-btn": {
+        pt: "Conheça mais histórias",
+        en: "Read more stories"
       }
     };
 
@@ -1663,6 +1674,12 @@
       document.getElementById('lang-pt').classList.remove('inactive');
       document.getElementById('lang-en').classList.add('inactive');
     });
+
+    // NOVA FUNÇÃO PARA O BOTÃO "CONHEÇA MAIS HISTÓRIAS"
+    function goToImpactPage() {
+      const lang = document.documentElement.getAttribute("lang") || "pt";
+      window.location.href = `https://hannahenglishcourse.netlify.app/Carrossel/impacto.html?lang=${lang}`;
+    }
   </script>
 </body>
 </html>
