--- a/Carrossel/hannah.html
+++ b/Carrossel/hannah.html
@@ -1587,21 +1587,7 @@
             "Curso de Inglês Hannah": "ingles",
             "Hannah English Course": "ingles"
           };
-
-          // Atualiza texto do botão "Saiba Mais / Learn More" conforme idioma atual
-const learnMoreBtn = document.getElementById('modal-learn-more');
-const currentLang = document.documentElement.getAttribute('lang') || 'pt';
-learnMoreBtn.innerHTML = translations['modal-learn-more'][currentLang];
-
-// Garante que não adiciona múltiplos listeners duplicados
-learnMoreBtn.onclick = function (event) {
-  event.preventDefault();
-  const projetoAtual = document.getElementById("modal-title").textContent.trim();
-  const projetoSlug = projetosMap[projetoAtual] || "default";
-  const urlDestino = `projetos.html?projeto=${encodeURIComponent(projetoSlug)}&lang=${currentLang}`;
-  window.location.href = urlDestino;
-};
-
+          
       // Botão fecha modal
       const closeBtn = document.querySelector('.close-btn');
       closeBtn.addEventListener('click', () => {
@@ -1653,6 +1639,37 @@ learnMoreBtn.onclick = function (event) {
       }
       positionMinCircles();
       window.addEventListener('resize', positionMinCircles);
+
+// Só adiciona o evento UMA VEZ para o botão "Saiba Mais"
+document.getElementById("modal-learn-more").addEventListener("click", function (event) {
+  event.preventDefault(); // Evita redirecionamento imediato
+
+  const modalTitle = document.getElementById("modal-title").textContent.trim();
+  const lang = document.documentElement.getAttribute("lang") || "pt";
+
+  const projetosMap = {
+    "Centro de Aprendizado HIS": "his",
+    "HIS Learning Center": "his",
+    "Mãos que Curam": "saude",
+    "Healing Hands": "saude",
+    "Mesa de Bênçãos": "food",
+    "Blessing Table": "food",
+    "Sementes de Sabedoria": "bolsa",
+    "Seeds of Wisdom": "bolsa",
+    "Lar de Siló": "abrigo",
+    "Shiloh’s Home": "abrigo",
+    "Plantação de Igrejas de Hannah": "igreja",
+    "Hannah’s Church Planting": "igreja",
+    "Colhendo Fé": "fazenda",
+    "Harvesting Faith": "fazenda",
+    "Curso de Inglês Hannah": "ingles",
+    "Hannah English Course": "ingles"
+  };
+
+  const projetoSlug = projetosMap[modalTitle] || "default";
+  const urlDestino = `projetos.html?projeto=${encodeURIComponent(projetoSlug)}&lang=${lang}`;
+  window.location.href = urlDestino;
+});
 
       // Inicia animação "Sobre Nós"
       initSobreNosAnimation();
