--- a/Carrossel/hannah.html
+++ b/Carrossel/hannah.html
@@ -982,7 +982,7 @@
           data-title-pt="Mãos que Curam"
           data-title-en="Healing Hands"
         >
-          Mãos que Curar
+          Mãos que Curam
         </li>
         <li
           id="li-projeto3"
@@ -1161,7 +1161,7 @@
       },
       "projetos-h2": { pt: "Nossos Projetos", en: "Our Projects" },
       "li-projeto1": { pt: "Centro de Aprendizado HIS", en: "HIS Learning Center" },
-      "li-projeto2": { pt: "Mãos que Curar", en: "Healing Hands" },
+      "li-projeto2": { pt: "Mãos que Curam", en: "Healing Hands" },
       "li-projeto3": { pt: "Mesa de Bênçãos", en: "Blessing Table" },
       "li-projeto4": { pt: "Sementes de Sabedoria", en: "Seeds of Wisdom" },
       "li-projeto5": { pt: "Lar de Siló", en: "Shiloh’s Home" },
@@ -1198,7 +1198,7 @@
 
     const projetosMap = {
       "Centro de Aprendizado HIS":"his","HIS Learning Center":"his",
-      "Mãos que Curar":"saude","Healing Hands":"saude",
+      "Mãos que Curam":"saude","Healing Hands":"saude",
       "Mesa de Bênçãos":"food","Blessing Table":"food",
       "Sementes de Sabedoria":"bolsa","Seeds of Wisdom":"bolsa",
       "Lar de Siló":"abrigo","Shiloh’s Home":"abrigo",
