--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
       englishVoice=pickVoice();
       document.getElementById("playTTSBtn").onclick=speakRobot;
       document.getElementById("invitationButton").onclick=()=>location.href="Apresentacao/propaganda.html";
-      document.getElementById("freeGamesButton").onclick   =()=>location.href="https://hannahenglishcourse.netfily.app/game.html";
+      document.getElementById("freeGamesButton").onclick   =()=>location.href="https://hannahenglishcourse.netlify.app/game.html";
       document.getElementById("subtitleLoggedOut").onclick=()=>window.scrollTo({top:0,behavior:"smooth"});
       updateNetworkStatus();
       verificarInstalacaoInicial();
