--- a/Apresentacao/apresentacao_port.html
+++ b/Apresentacao/apresentacao_port.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Hannah English Course Presentation</title>
 
-  <!-- Use existing stylesheet for base styles -->
+  <!-- Base styles -->
   <link rel="stylesheet" href="CSS/styles.css" />
 
   <style>
     /* Presentation Page Specific Styles */
     .presentation-container {
-      background-image: url('imagens/fundo.png');
+      background-image: url('../../../../../imagens/fundo.png');
       background-repeat: repeat;
       font-family: Arial, sans-serif;
       color: #333;
@@ -25,8 +25,13 @@
     .presentation-header p {
       font-size: 1.2em;
       max-width: 800px;
-      margin: 0 auto 30px;
+      margin: 0 auto 20px;
       line-height: 1.5;
+    }
+    .invitation img {
+      width: 200px;
+      cursor: pointer;
+      margin: 20px 0;
     }
     /* Carousel */
     .carousel {
@@ -73,7 +78,7 @@
       font-size: 0.95em;
       color: #555;
     }
-    /* Video and AI Sections */
+    /* Section two for videos, mascot, AI */
     .section-two {
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(300px,1fr));
@@ -85,6 +90,14 @@
       height: auto;
       border-radius: 10px;
       box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+    }
+    .section-two h3 {
+      margin-top: 15px;
+      font-size: 1.3em;
+    }
+    .section-two p {
+      font-size: 1em;
+      color: #555;
     }
     .cta-button {
       display: inline-block;
@@ -114,82 +127,90 @@
     <div class="presentation-header">
       <h1>Hannah English Course</h1>
       <p>
-        O Hannah English Course não é apenas um curso de inglês, mas uma ferramenta missionária inovadora. Através dele, alunos aprendem inglês enquanto mergulham na Palavra de Deus, tornando-se fluentes na língua e fortalecidos na fé.
-        Desenvolvido para apoiar o ensino de inglês nos nossos Learning Centers e facilitar a expansão do projeto para novos polos missionários no sudoeste asiático.
+        The Hannah English Course is not just an English course, but an innovative missionary tool. Through it, students learn English while immersing themselves in the Word of God, becoming fluent in the language and strengthened in their faith. Developed to support English teaching in our Learning Centers and to facilitate the expansion of the project to new mission hubs across Southeast Asia.
       </p>
+    </div>
+
+    <!-- Invitation GIF -->
+    <div class="invitation">
+      <a href="https://hannahenglishcourse.netlify.app/apresentacao/propaganda" target="_blank">
+        <img src="https://hannahenglishcourse.netlify.app/imagens/convite.gif" alt="Invitation to Explore App">
+      </a>
     </div>
 
     <!-- Main App Screens Carousel -->
     <div class="carousel">
-      <img src="Carrossel/imagens/ingles/img1.png" alt="Página Inicial do App">
-      <img src="Carrossel/imagens/ingles/img2.png" alt="Tabuleiro de Fases">
+      <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img1.png" alt="Home Screen">
+      <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img2.png" alt="Learning Board">
     </div>
 
     <!-- Features Grid -->
     <div class="features">
       <div class="feature-card">
-        <img src="Carrossel/imagens/ingles/img3.png" alt="Exercícios de Gramática">
-        <h3>Exercícios de Gramática</h3>
-        <p>Pratique estruturas gramaticais de forma contextualizada e interativa.</p>
+        <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img3.png" alt="Grammar">
+        <h3>Grammar: Mastering English in Context</h3>
+        <p>Grammar lessons are presented in a contextualized and practical manner, integrating with vocabulary and stories to help students understand and apply grammatical rules effectively.</p>
       </div>
       <div class="feature-card">
-        <img src="Carrossel/imagens/ingles/img4.png" alt="Mixed Letters">
-        <h3>Mixed Letters</h3>
-        <p>Reordene as letras e fortaleça a compreensão da ortografia.</p>
+        <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img4.png" alt="Mixed Letters">
+        <h3>Mixed Letters: Strengthen Word Structure</h3>
+        <p>Mixed Letters strengthens memory and word structure in an interactive way, helping learners internalize correct spelling.</p>
       </div>
       <div class="feature-card">
-        <img src="Carrossel/imagens/ingles/img5.png" alt="Memory Game">
-        <h3>Memory Game</h3>
-        <p>Reforce o vocabulário jogando e memorizando cartas correspondentes.</p>
+        <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img5.png" alt="Memory Game">
+        <h3>Memory Game: Enhance Vocabulary Through Play</h3>
+        <p>The Memory Game combines fun and learning, helping students reinforce vocabulary and word memorization through an interactive matching game format.</p>
       </div>
       <div class="feature-card">
-        <img src="Carrossel/imagens/ingles/img6.png" alt="Word Search">
-        <h3>Word Search</h3>
-        <p>Encontre palavras escondidas e melhore a leitura e o reconhecimento visual.</p>
+        <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img6.png" alt="Word Search">
+        <h3>Word Search: Fun with Vocabulary Puzzles</h3>
+        <p>Word Search activities enhance vocabulary learning by challenging students to find and recognize words in a grid, improving spelling and visual word recognition.</p>
       </div>
       <div class="feature-card">
-        <img src="Carrossel/imagens/ingles/img7.png" alt="Speak Cards">
-        <h3>Speak Cards</h3>
-        <p>Pratique a pronúncia e receba feedback instantâneo da IA.</p>
+        <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img7.png" alt="Speak Cards">
+        <h3>Speak Cards: Practice Pronunciation Interactively</h3>
+        <p>Speak Cards show images and words that can be played aloud. Students pronounce the word, and the app evaluates pronunciation accuracy.</p>
       </div>
       <div class="feature-card">
-        <img src="Carrossel/imagens/ingles/img8.png" alt="Quiz">
-        <h3>Quiz</h3>
-        <p>Teste seus conhecimentos com perguntas dinâmicas e divertidas.</p>
+        <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img8.png" alt="Quiz">
+        <h3>Quizzes: Interactive Question Games</h3>
+        <p>A question game focused on biblical, linguistic, and grammatical content from each lesson, with immediate feedback on correct and incorrect answers.</p>
       </div>
     </div>
 
     <!-- Video and Mascot Section -->
     <div class="section-two">
       <div>
-        <img src="Carrossel/imagens/ingles/img9.png" alt="Vídeos do App">
-        <h3>Vídeos Educativos</h3>
+        <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img9.png" alt="HannahVideos">
+        <h3>HannahVideos: Dynamic Video Learning</h3>
+        <p>HannahVideos are central to the course, tailored for each unit to reflect biblical themes, grammatical content, and vocabulary. Engaging videos help reinforce learning through visual and auditory means.</p>
       </div>
       <div>
-        <img src="Carrossel/imagens/ingles/img10.png" alt="Nossa Mascote Hannah">
-        <h3>Mascote Hannah</h3>
+        <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img10.png" alt="Mascot Hannah">
+        <h3>Mascot Hannah: Your Learning Companion</h3>
+        <p>Hannah guides learners through each lesson, making learning engaging, relatable, and fun for children, youth, and adults.</p>
       </div>
     </div>
 
     <!-- AI Samuel Section -->
     <div class="section-two">
       <div style="grid-column: 1 / -1;">
-        <img src="Carrossel/imagens/ingles/img11.png" alt="IA Robô Samuel">
-        <h3>Robô Samuel</h3>
-        <p>IA interativa que corrige pronúncia e gramática em tempo real, tornando cada aula única.</p>
+        <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img11.png" alt="Robot Samuel">
+        <h3>Robot Samuel: AI as Your Ally</h3>
+        <p><strong>What it is:</strong> An AI assistant that monitors activity difficulty, provides real-time tips, and adapts to each student's level.<br><br><strong>Why it's amazing:</strong> Enables natural conversations with the student, calling them by name and using the topic of the recently studied lesson. It corrects grammar and pronunciation in a friendly and motivating way, boosting confidence when speaking English.</p>
       </div>
     </div>
 
     <!-- Real Impact Section -->
     <div style="margin-bottom:40px;">
-      <img src="Carrossel/imagens/ingles/img12.png" alt="Sala de Aula com Alunos" style="width:100%;max-width:800px;border-radius:10px;box-shadow:0 4px 8px rgba(0,0,0,0.2);" />
-      <h3>Presente nos Learning Centers</h3>
-      <p>Transformando vidas com educação de qualidade e valores cristãos aplicados no dia a dia.</p>
+      <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img12.png" alt="Classroom Impact" style="width:100%;max-width:800px;border-radius:10px;box-shadow:0 4px 8px rgba(0,0,0,0.2);" />
+      <h3>Real Impact in Our Classrooms</h3>
+      <p>See how students engage with the app and grow in their language skills and faith in our Learning Centers.</p>
     </div>
 
     <!-- Call to Action -->
     <a href="https://hannahenglishcourse.netlify.app" class="cta-button" target="_blank" rel="noopener">
-      📌 Quero conhecer o Hannah English Course
+      📌 Discover the Hannah English Course
     </a>
   </div>
 </body>
