--- a/Apresentacao/apresentacao_port.html
+++ b/Apresentacao/apresentacao_port.html
@@ -17,6 +17,11 @@
       color: #333;
       padding: 40px 20px;
       text-align: center;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin: 0;
+      min-height: 100vh;
     }
     .presentation-header h1 {
       font-size: 2.5em;
@@ -41,14 +46,31 @@
       gap: 20px;
       margin-bottom: 40px;
       padding-bottom: 10px;
+      width: 100%;
+      justify-content: center;
+    }
+    .carousel figure {
+      flex: 0 0 auto;
+      scroll-snap-align: center;
+      width: 300px;
+      margin: 0;
+      text-align: center;
     }
     .carousel img {
-      flex: 0 0 auto;
-      width: 300px;
+      width: 100%;
       height: auto;
       border-radius: 10px;
       box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-      scroll-snap-align: center;
+    }
+    .carousel figcaption {
+      margin-top: 10px;
+      font-size: 0.95em;
+      color: #555;
+    }
+    .carousel figcaption h3 {
+      margin: 5px 0;
+      font-size: 1.1em;
+      color: #333;
     }
     /* Features grid */
     .features {
@@ -56,6 +78,8 @@
       grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
       gap: 20px;
       margin-bottom: 40px;
+      width: 100%;
+      max-width: 1200px;
     }
     .feature-card {
       background: #fff;
@@ -78,12 +102,14 @@
       font-size: 0.95em;
       color: #555;
     }
-    /* Section two for videos, mascot, AI */
+    /* Section two for videos, mascot, AI & real impact */
     .section-two {
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(300px,1fr));
       gap: 20px;
       margin-bottom: 40px;
+      width: 100%;
+      max-width: 1200px;
     }
     .section-two img {
       width: 100%;
@@ -115,7 +141,7 @@
       transform: scale(1.05);
     }
     @media (max-width: 600px) {
-      .carousel img { width: 240px; }
+      .carousel figure { width: 240px; }
       .presentation-header h1 { font-size: 2em; }
       .presentation-header p { font-size: 1em; }
     }
@@ -138,10 +164,22 @@
       </a>
     </div>
 
-    <!-- Main App Screens Carousel -->
+    <!-- Main App Screens Carousel with Captions -->
     <div class="carousel">
-      <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img1.png" alt="Home Screen">
-      <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img2.png" alt="Learning Board">
+      <figure>
+        <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img1.png" alt="Home Screen">
+        <figcaption>
+          <h3>Home Screen: Your Learning Hub</h3>
+          <p>Access lessons, games, and resources from a clean, intuitive dashboard designed for all ages.</p>
+        </figcaption>
+      </figure>
+      <figure>
+        <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img2.png" alt="Learning Board">
+        <figcaption>
+          <h3>Learning Board: Track Your Journey</h3>
+          <p>Visualize progress through gamified levels and unlock new activities as you advance.</p>
+        </figcaption>
+      </figure>
     </div>
 
     <!-- Features Grid -->
@@ -149,63 +187,77 @@
       <div class="feature-card">
         <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img3.png" alt="Grammar">
         <h3>Grammar: Mastering English in Context</h3>
-        <p>Grammar lessons are presented in a contextualized and practical manner, integrating with vocabulary and stories to help students understand and apply grammatical rules effectively.</p>
+        <p>Grammar lessons are presented in a contextualized and practical manner, integrating with vocabulary and stories to help students apply rules effectively.</p>
       </div>
       <div class="feature-card">
         <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img4.png" alt="Mixed Letters">
         <h3>Mixed Letters: Strengthen Word Structure</h3>
-        <p>Mixed Letters strengthens memory and word structure in an interactive way, helping learners internalize correct spelling.</p>
+        <p>Arrange mixed letters to internalize spelling patterns and reinforce memory.</p>
       </div>
       <div class="feature-card">
         <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img5.png" alt="Memory Game">
         <h3>Memory Game: Enhance Vocabulary Through Play</h3>
-        <p>The Memory Game combines fun and learning, helping students reinforce vocabulary and word memorization through an interactive matching game format.</p>
+        <p>Match cards in a fun format to reinforce and recall vocabulary effectively.</p>
       </div>
       <div class="feature-card">
         <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img6.png" alt="Word Search">
         <h3>Word Search: Fun with Vocabulary Puzzles</h3>
-        <p>Word Search activities enhance vocabulary learning by challenging students to find and recognize words in a grid, improving spelling and visual word recognition.</p>
+        <p>Find hidden words in a grid to improve spelling and visual recognition.</p>
       </div>
       <div class="feature-card">
         <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img7.png" alt="Speak Cards">
         <h3>Speak Cards: Practice Pronunciation Interactively</h3>
-        <p>Speak Cards show images and words that can be played aloud. Students pronounce the word, and the app evaluates pronunciation accuracy.</p>
+        <p>Listen to words and images, then speak and receive instant AI feedback on pronunciation.</p>
       </div>
       <div class="feature-card">
         <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img8.png" alt="Quiz">
         <h3>Quizzes: Interactive Question Games</h3>
-        <p>A question game focused on biblical, linguistic, and grammatical content from each lesson, with immediate feedback on correct and incorrect answers.</p>
+        <p>Test knowledge with engaging question sets and immediate feedback on answers.</p>
+      </div>
+      <div class="feature-card">
+        <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img13.png" alt="StoryCards">
+        <h3>StoryCards: Learn with Biblical Stories</h3>
+        <p>Delve into Bible narratives crafted to teach specific grammar and vocabulary topics.</p>
+      </div>
+      <div class="feature-card">
+        <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img14.png" alt="Flashcards">
+        <h3>Flashcards: Interactive Vocabulary Building</h3>
+        <p>Reinforce key words with image-word pairs that boost memorization and recall.</p>
+      </div>
+      <div class="feature-card">
+        <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img15.png" alt="Biblical Lessons">
+        <h3>Biblical Lessons: Connect Bible Lessons to Life</h3>
+        <p>Apply spiritual teachings in matching games and life lesson activities for deeper understanding.</p>
+      </div>
+      <div class="feature-card">
+        <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img16.png" alt="Tests">
+        <h3>Tests: Assess Your Progress</h3>
+        <p>Evaluate your understanding with regular assessments designed to guide further learning.</p>
       </div>
     </div>
 
-    <!-- Video and Mascot Section -->
+    <!-- Video, Mascot, AI & Impact Sections -->
     <div class="section-two">
       <div>
         <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img9.png" alt="HannahVideos">
         <h3>HannahVideos: Dynamic Video Learning</h3>
-        <p>HannahVideos are central to the course, tailored for each unit to reflect biblical themes, grammatical content, and vocabulary. Engaging videos help reinforce learning through visual and auditory means.</p>
+        <p>Engaging videos tailored to biblical themes reinforce learning visually and audibly.</p>
       </div>
       <div>
         <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img10.png" alt="Mascot Hannah">
         <h3>Mascot Hannah: Your Learning Companion</h3>
-        <p>Hannah guides learners through each lesson, making learning engaging, relatable, and fun for children, youth, and adults.</p>
+        <p>Hannah guides learners through lessons, making each session relatable and fun.</p>
       </div>
-    </div>
-
-    <!-- AI Samuel Section -->
-    <div class="section-two">
       <div style="grid-column: 1 / -1;">
         <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img11.png" alt="Robot Samuel">
         <h3>Robot Samuel: AI as Your Ally</h3>
-        <p><strong>What it is:</strong> An AI assistant that monitors activity difficulty, provides real-time tips, and adapts to each student's level.<br><br><strong>Why it's amazing:</strong> Enables natural conversations with the student, calling them by name and using the topic of the recently studied lesson. It corrects grammar and pronunciation in a friendly and motivating way, boosting confidence when speaking English.</p>
+        <p><strong>What it is:</strong> An AI assistant that monitors difficulty, offers tips, and adapts to each student.<br><br><strong>Why it's amazing:</strong> Natural conversations that correct grammar and pronunciation in real-time.</p>
       </div>
-    </div>
-
-    <!-- Real Impact Section -->
-    <div style="margin-bottom:40px;">
-      <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img12.png" alt="Classroom Impact" style="width:100%;max-width:800px;border-radius:10px;box-shadow:0 4px 8px rgba(0,0,0,0.2);" />
-      <h3>Real Impact in Our Classrooms</h3>
-      <p>See how students engage with the app and grow in their language skills and faith in our Learning Centers.</p>
+      <div style="grid-column: 1 / -1;">
+        <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img12.png" alt="Classroom Impact">
+        <h3>Real Impact in Our Classrooms</h3>
+        <p>See students grow in language skills and faith through hands-on use in our Learning Centers.</p>
+      </div>
     </div>
 
     <!-- Call to Action -->
