--- a/LandPage/apresentacao_LP.html
+++ b/LandPage/apresentacao_LP.html
@@ -93,8 +93,8 @@
       <!-- HEADER -->
       <header>
         <div class="logo-area">
-          <a href="https://www.instagram.com/hannah_mission" target="_blank">
-            <img src="./logo-hannahfoundation.png" alt="Hannah Foundation Logo">
+          <a href="https://hannahenglishcourse.netlify.app/" target="_blank">
+            <img src="./titulo.png" alt="Hannah Foundation Logo">
           </a>
         </div>
         <h1>A Christian Solution for Teaching English in Schools</h1>
@@ -209,8 +209,8 @@
       <footer>
         <p><em>“And He said to them, ‘Go into all the world and preach the gospel to every creature.’” (Mark 16 : 15)</em></p>
         <div class="footer-logos">
-          <a href="https://www.instagram.com/hannah_mission" target="_blank">
-            <img src="./logo-hannahfoundation.png" alt="Hannah Foundation Logo">
+          <a href="https://hannahenglishcourse.netlify.app/" target="_blank">
+            <img src="./titulo.png" alt="Hannah Foundation Logo">
           </a>
         </div>
         <div class="footer-copy"><p>© 2025 Hannah English Course. All rights reserved.</p></div>
@@ -222,8 +222,8 @@
       <!-- HEADER -->
       <header>
         <div class="logo-area">
-          <a href="https://www.instagram.com/hannah_mission" target="_blank">
-            <img src="./logo-hannahfoundation.png" alt="Logo Hannah Foundation">
+          <a href="https://hannahenglishcourse.netlify.app/" target="_blank">
+            <img src="./titulo.png" alt="Logo Hannah Foundation">
           </a>
         </div>
         <h1>Uma Solução Cristã para o Ensino de Inglês nas Escolas</h1>
@@ -325,8 +325,8 @@
       <footer>
         <p><em>“E disse-lhes: Ide por todo o mundo, pregai o evangelho a toda criatura.” (Marcos 16 : 15)</em></p>
         <div class="footer-logos">
-          <a href="https://www.instagram.com/hannah_mission" target="_blank">
-            <img src="./logo-hannahfoundation.png" alt="Logo Hannah Foundation">
+          <a href="https://hannahenglishcourse.netlify.app/" target="_blank">
+            <img src="./titulo.png" alt="Logo Hannah Foundation">
           </a>
         </div>
         <div class="footer-copy"><p>© 2025 Hannah English Course. Todos os direitos reservados.</p></div>
