--- a/LandPage/apresentacao_LP.html
+++ b/LandPage/apresentacao_LP.html
@@ -192,7 +192,7 @@
           <div class="testemunho"><img src="./professorA.png" alt="Teacher A"><div class="testemunho-texto"><strong>Teacher A (Thailand):</strong><p>“Hannah English Course has brought joy and depth to our classes. Kids learn English and Christian values simultaneously in a lively, engaging way.”</p></div></div>
           <div class="testemunho"><img src="./alunaB.png" alt="Student B"><div class="testemunho-texto"><strong>Student B (Myanmar):</strong><p>“I never imagined learning English could be this fun. Each Bible story helps me grow in both language and faith.”</p></div></div>
           <div class="testemunho"><img src="./pastor.png" alt="Pastor"><div class="testemunho-texto"><strong>Pastor of a Planted Church:</strong><p>“Teaching English alongside God’s Word has blessed our community. Hannah English Course was a game-changer for spiritual and educational growth.”</p></div></div>
-          <div class="testemunho"><img src="./diretora.png" alt="Director"><div class="testemunho-texto"><strong>Director, Hannah Foundation:</strong><p>“Integrating English teaching and biblical values transformed our students’ linguistic and spiritual formation.”</p></div></div>
+          <div class="testemunho"><img src="./diretora.png" alt="Director"><div class="testemunho-texto"><strong>Director, Hannah English Course:</strong><p>“Integrating English teaching and biblical values transformed our students’ linguistic and spiritual formation.”</p></div></div>
         </div>
       </section>
 
