--- a/LandPage/apresentacao_LP - Copy.html
+++ b/LandPage/apresentacao_LP - Copy.html
@@ -282,95 +282,23 @@
       <section>
         <h3>Recursos do Aplicativo</h3>
         <div class="feature-gallery">
-  <div class="feature-box">
-    <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img1.png" alt="Tela Inicial">
-    <h3>Tela Inicial: Centro de Aprendizagem</h3>
-    <p>Painel intuitivo com acesso rápido a lições, jogos e recursos.</p>
-  </div>
-
-  <div class="feature-box">
-    <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img2.png" alt="Mapa de Progresso">
-    <h3>Mapa de Progresso</h3>
-    <p>Acompanhe seu avanço em níveis gamificados.</p>
-  </div>
-
-  <div class="feature-box">
-    <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img13.png" alt="StoryCards">
-    <h3>StoryCards</h3>
-    <p>Histórias bíblicas que ensinam gramática e vocabulário.</p>
-  </div>
-
-  <div class="feature-box">
-    <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img14.png" alt="Flashcards">
-    <h3>Flashcards</h3>
-    <p>Cards imagem-palavra para memorização rápida.</p>
-  </div>
-
-  <div class="feature-box">
-    <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img8.png" alt="Quizzes">
-    <h3>Quizzes</h3>
-    <p>Perguntas interativas sobre Bíblia, língua e gramática.</p>
-  </div>
-
-  <div class="feature-box">
-    <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img5.png" alt="Jogo da Memória">
-    <h3>Jogo da Memória</h3>
-    <p>Associe cartas para fixar novas palavras.</p>
-  </div>
-
-  <div class="feature-box">
-    <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img6.png" alt="Caça-Palavras">
-    <h3>Caça-Palavras</h3>
-    <p>Desafios que reforçam ortografia e reconhecimento visual.</p>
-  </div>
-
-  <div class="feature-box">
-    <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img4.png" alt="Ferramentas de Ortografia">
-    <h3>Ferramentas de Ortografia</h3>
-    <p>Mixed Letters e Missing Words fortalecem escrita e vocabulário.</p>
-  </div>
-
-  <div class="feature-box">
-    <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img3.png" alt="Gramática">
-    <h3>Gramática em Contexto</h3>
-    <p>Lições que integram vocabulário, histórias e regras.</p>
-  </div>
-
-  <div class="feature-box">
-    <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img7.png" alt="Speak Cards">
-    <h3>Speak Cards</h3>
-    <p>Pratique pronúncia com feedback imediato da IA.</p>
-  </div>
-
-  <div class="feature-box">
-    <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img9.png" alt="HannahVideos">
-    <h3>HannahVideos</h3>
-    <p>Vídeos dinâmicos que reforçam temas bíblicos e linguísticos.</p>
-  </div>
-
-  <div class="feature-box">
-    <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img15.png" alt="Lições Bíblicas">
-    <h3>Lições Bíblicas</h3>
-    <p>Games e reflexões que conectam Bíblia à vida cotidiana.</p>
-  </div>
-
-  <div class="feature-box">
-    <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img16.png" alt="Avaliações">
-    <h3>Avaliações</h3>
-    <p>Testes periódicos para medir progresso.</p>
-  </div>
-
-  <div class="feature-box highlight-ai">
-    <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img11.png" alt="Robô Samuel">
-    <h3>Robô Samuel – IA Aliada</h3>
-    <p>Corrige pronúncia e gramática em tempo real e personaliza o ensino.</p>
-  </div>
-
-  <div class="feature-box">
-    <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img12.png" alt="Impacto">
-    <h3>Impacto em Sala</h3>
-    <p>Resultados concretos nos Learning Centers.</p>
-  </div>
+          <!-- títulos/descrições já em português, imagens iguais -->
+          <div class="feature-box"><img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img1.png" alt="Tela Inicial"><h3>Tela Inicial: Centro de Aprendizagem</h3><p>Painel intuitivo com acesso rápido a lições, jogos e recursos.</p></div>
+          <div class="feature-box"><img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img2.png" alt="Mapa de Progresso"><h3>Mapa de Progresso</h3><p>Acompanhe seu avanço em níveis gamificados.</p></div>
+          <div class="feature-box"><img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img3.png" alt="Gramática"><h3>Gramática em Contexto</h3><p>Lições que integram vocabulário, histórias e regras.</p></div>
+          <div class="feature-box"><img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img4.png" alt="Ferramentas de Ortografia"><h3>Ferramentas de Ortografia</h3><p>Mixed Letters e Missing Words fortalecem escrita e vocabulário.</p></div>
+          <div class="feature-box"><img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img5.png" alt="Jogo da Memória"><h3>Jogo da Memória</h3><p>Associe cartas para fixar novas palavras.</p></div>
+          <div class="feature-box"><img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img6.png" alt="Caça-Palavras"><h3>Caça-Palavras</h3><p>Desafios que reforçam ortografia e reconhecimento visual.</p></div>
+          <div class="feature-box"><img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img7.png" alt="Speak Cards"><h3>Speak Cards</h3><p>Pratique pronúncia com feedback imediato da IA.</p></div>
+          <div class="feature-box"><img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img8.png" alt="Quizzes"><h3>Quizzes</h3><p>Perguntas interativas sobre Bíblia, língua e gramática.</p></div>
+          <div class="feature-box"><img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img9.png" alt="HannahVideos"><h3>HannahVideos</h3><p>Vídeos dinâmicos que reforçam temas bíblicos e linguísticos.</p></div>
+          <div class="feature-box"><img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img13.png" alt="StoryCards"><h3>StoryCards</h3><p>Histórias bíblicas que ensinam gramática e vocabulário.</p></div>
+          <div class="feature-box"><img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img14.png" alt="Flashcards"><h3>Flashcards</h3><p>Cards imagem-palavra para memorização rápida.</p></div>
+          <div class="feature-box"><img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img15.png" alt="Lições Bíblicas"><h3>Lições Bíblicas</h3><p>Games e reflexões que conectam Bíblia à vida cotidiana.</p></div>
+          <div class="feature-box"><img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img16.png" alt="Avaliações"><h3>Avaliações</h3><p>Testes periódicos para medir progresso.</p></div>
+          <div class="feature-box highlight-ai"><img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img11.png" alt="Robô Samuel"><h3>Robô Samuel – IA Aliada</h3><p>Corrige pronúncia e gramática em tempo real e personaliza o ensino.</p></div>
+          <div class="feature-box"><img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img12.png" alt="Impacto"><h3>Impacto em Sala</h3><p>Resultados concretos nos Learning Centers.</p></div>
+        </div>
       </section>
 
       <!-- TESTEMUNHOS PT -->
