--- a/LandPage/apresentacao_LP.html
+++ b/LandPage/apresentacao_LP.html
@@ -150,40 +150,102 @@
       </section>
 
       <!-- FEATURES EN (texts restored per your list) -->
-      <section>
-        <h3>App Features</h3>
-        <div class="feature-gallery">
-          <div class="feature-box"><img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img1.png" alt="Home Screen"><h3>Home Screen: Your Learning Hub</h3><p>Access lessons, games, and resources from a clean, intuitive dashboard designed for all ages.</p></div>
+     <section>
+  <h3>App Features</h3>
+  <div class="feature-gallery">
 
-          <div class="feature-box"><img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img2.png" alt="Learning Board"><h3>Learning Board: Track Your Journey</h3><p>Visualize progress through gamified levels and unlock new activities as you advance.</p></div>
+    <div class="feature-box">
+      <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img1.png" alt="Home Screen">
+      <h3>Home Screen: Your Learning Hub</h3>
+      <p>Access lessons, games, and resources from a clean, intuitive dashboard designed for all ages.</p>
+    </div>
 
-          <div class="feature-box"><img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img3.png" alt="Grammar"><h3>Grammar: Mastering English in Context</h3><p>Grammar lessons are presented in a contextualized and practical manner, integrating with vocabulary and stories to help students understand and apply grammatical rules effectively.</p></div>
+    <div class="feature-box">
+      <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img2.png" alt="Learning Board">
+      <h3>Learning Board: Track Your Journey</h3>
+      <p>Visualize progress through gamified levels and unlock new activities as you advance.</p>
+    </div>
 
-          <div class="feature-box"><img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img4.png" alt="Spelling Tools"><h3>Spelling Tools: Practice Accurate Writing</h3><p>Missing Words and Mixed Letters improve spelling and vocabulary. Missing Words focuses on word recognition and spelling through image association, while Mixed Letters strengthens memory and word structure interactively.</p></div>
+    <div class="feature-box">
+      <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img13.png" alt="StoryCards">
+      <h3>StoryCards: Learn English with Biblical Stories</h3>
+      <p>StoryCards teach English meaningfully by using biblical stories that connect grammar, vocabulary and comprehension. Each story covers specific language targets, making learning engaging and significant.</p>
+    </div>
 
-          <div class="feature-box"><img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img5.png" alt="Memory Game"><h3>Memory Game: Enhance Vocabulary Through Play</h3><p>Match cards to reinforce and recall vocabulary effectively.</p></div>
+    <div class="feature-box">
+      <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img14.png" alt="Flashcards">
+      <h3>Flashcards: Interactive Vocabulary Building</h3>
+      <p>Flashcards reinforce vocabulary learning visually. Each card displays an image on one side and the corresponding word on the other, facilitating easy memorization and association.</p>
+    </div>
 
-          <div class="feature-box"><img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img6.png" alt="Word Search"><h3>Word Search: Fun with Vocabulary Puzzles</h3><p>Word Search activities enhance vocabulary learning by challenging students to find and recognize words in a grid, improving spelling and visual word recognition in an enjoyable way.</p></div>
+    <div class="feature-box">
+      <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img8.png" alt="Quizzes">
+      <h3>Quizzes: Interactive Question Games</h3>
+      <p>A question game focused on biblical, linguistic and grammatical content from each lesson, with immediate feedback on correct and incorrect answers.</p>
+    </div>
 
-          <div class="feature-box"><img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img7.png" alt="Speak Cards"><h3>Speak Cards: Practice Pronunciation Interactively</h3><p>Listen to image-word cards, then pronounce them – the app evaluates accuracy and offers feedback to perfect pronunciation.</p></div>
+    <div class="feature-box">
+      <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img5.png" alt="Memory Game">
+      <h3>Memory Game: Enhance Vocabulary Through Play</h3>
+      <p>Match cards to reinforce and recall vocabulary effectively.</p>
+    </div>
 
-          <div class="feature-box"><img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img8.png" alt="Quizzes"><h3>Quizzes: Interactive Question Games</h3><p>A question game focused on biblical, linguistic and grammatical content from each lesson, with immediate feedback on correct and incorrect answers.</p></div>
+    <div class="feature-box">
+      <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img6.png" alt="Word Search">
+      <h3>Word Search: Fun with Vocabulary Puzzles</h3>
+      <p>Word Search activities enhance vocabulary learning by challenging students to find and recognize words in a grid, improving spelling and visual word recognition in an enjoyable way.</p>
+    </div>
 
-          <div class="feature-box"><img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img9.png" alt="HannahVideos"><h3>HannahVideos: Dynamic Video Learning</h3><p>Engaging videos tailored to each unit reinforce biblical themes, grammar and vocabulary through visual and auditory learning.</p></div>
+    <div class="feature-box">
+      <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img4.png" alt="Spelling Tools">
+      <h3>Spelling Tools: Practice Accurate Writing</h3>
+      <p>Missing Words and Mixed Letters improve spelling and vocabulary. Missing Words focuses on word recognition and spelling through image association, while Mixed Letters strengthens memory and word structure interactively.</p>
+    </div>
 
-          <div class="feature-box"><img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img13.png" alt="StoryCards"><h3>StoryCards: Learn English with Biblical Stories</h3><p>StoryCards teach English meaningfully by using biblical stories that connect grammar, vocabulary and comprehension. Each story covers specific language targets, making learning engaging and significant.</p></div>
+    <div class="feature-box">
+      <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img3.png" alt="Grammar">
+      <h3>Grammar: Mastering English in Context</h3>
+      <p>Grammar lessons are presented in a contextualized and practical manner, integrating with vocabulary and stories to help students understand and apply grammatical rules effectively.</p>
+    </div>
 
-          <div class="feature-box"><img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img14.png" alt="Flashcards"><h3>Flashcards: Interactive Vocabulary Building</h3><p>Flashcards reinforce vocabulary learning visually. Each card displays an image on one side and the corresponding word on the other, facilitating easy memorization and association.</p></div>
+    <div class="feature-box">
+      <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img7.png" alt="Speak Cards">
+      <h3>Speak Cards: Practice Pronunciation Interactively</h3>
+      <p>Listen to image-word cards, then pronounce them – the app evaluates accuracy and offers feedback to perfect pronunciation.</p>
+    </div>
 
-          <div class="feature-box"><img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img15.png" alt="Biblical Lessons"><h3>Exploring Biblical Lessons: Connect Bible Lessons to Life</h3><p>Connect biblical lessons to real-life situations through Matching Games and Life Lessons activities, fostering reflection and practical application of the values learned in both linguistic and spiritual contexts.</p></div>
+    <div class="feature-box">
+      <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img9.png" alt="HannahVideos">
+      <h3>HannahVideos: Dynamic Video Learning</h3>
+      <p>Engaging videos tailored to each unit reinforce biblical themes, grammar and vocabulary through visual and auditory learning.</p>
+    </div>
 
-          <div class="feature-box"><img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img16.png" alt="Tests"><h3>Tests: Assess Your Progress</h3><p>Regular tests are essential tools for evaluating understanding and mastery of the material, tracking progress and identifying areas for improvement.</p></div>
+    <div class="feature-box">
+      <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img15.png" alt="Biblical Lessons">
+      <h3>Exploring Biblical Lessons: Connect Bible Lessons to Life</h3>
+      <p>Connect biblical lessons to real-life situations through Matching Games and Life Lessons activities, fostering reflection and practical application of the values learned in both linguistic and spiritual contexts.</p>
+    </div>
 
-          <div class="feature-box highlight-ai"><img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img11.png" alt="Robot Samuel"><h3>Robot Samuel: AI as Your Ally</h3><p><strong>What it is:</strong> An AI assistant that monitors activity difficulty, provides real-time tips and adapts to each student’s level.<br><br><strong>Why it’s amazing:</strong> Enables natural conversations, calls students by name and uses the current lesson topic. Corrects grammar and pronunciation in a friendly, motivating way, boosting confidence.</p></div>
+    <div class="feature-box">
+      <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img16.png" alt="Tests">
+      <h3>Tests: Assess Your Progress</h3>
+      <p>Regular tests are essential tools for evaluating understanding and mastery of the material, tracking progress and identifying areas for improvement.</p>
+    </div>
 
-          <div class="feature-box"><img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img12.png" alt="Classroom Impact"><h3>Classroom Impact</h3><p>See tangible results from our Learning Centers—students grow in language and faith.</p></div>
-        </div>
-      </section>
+    <div class="feature-box highlight-ai">
+      <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img11.png" alt="Robot Samuel">
+      <h3>Robot Samuel: AI as Your Ally</h3>
+      <p><strong>What it is:</strong> An AI assistant that monitors activity difficulty, provides real-time tips and adapts to each student’s level.<br><br><strong>Why it’s amazing:</strong> Enables natural conversations, calls students by name and uses the current lesson topic. Corrects grammar and pronunciation in a friendly, motivating way, boosting confidence.</p>
+    </div>
+
+    <div class="feature-box">
+      <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img12.png" alt="Classroom Impact">
+      <h3>Classroom Impact</h3>
+      <p>See tangible results from our Learning Centers—students grow in language and faith.</p>
+    </div>
+
+  </div>
+</section>
 
       <!-- TESTIMONIALS EN -->
       <section>
