--- a/LandPage/apresentacao_LP.html
+++ b/LandPage/apresentacao_LP.html
@@ -36,6 +36,10 @@
       display:flex;justify-content:center;align-items:center;
       gap:1rem;margin-bottom:1rem
     }
+    .logo-area img {
+      max-width: 100%;
+      height: auto;
+    }
     .hero img{max-width:230px}           /* ① reduce GIF size */
     .image-section img,
     .feature-box img,.testemunho img{
