--- a/LandPage/apresentacao_LP.html
+++ b/LandPage/apresentacao_LP.html
@@ -259,6 +259,17 @@
             <p><strong>What it is:</strong> An AI assistant that monitors activity difficulty, provides real-time tips and adapts to each student’s level.<br><br><strong>Why it’s amazing:</strong> Enables natural conversations, calls students by name and uses the current lesson topic. Corrects grammar and pronunciation in a friendly, motivating way, boosting confidence.</p>
           </div>
 
+<div style="margin-top: 2rem; text-align: center;">
+  <h4 style="color: #2F4F2F; font-size: 1.2rem;">Watch Joe Interact with Robot Samuel</h4>
+  <video width="100%" style="max-width: 720px; border-radius: 8px;" controls>
+    <source src="./Joe_and_Samuel.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+  <p style="margin-top: 0.5rem; font-style: italic; color: #555;">
+    Real classroom moment: AI guiding a student in pronunciation and grammar.
+  </p>
+</div>
+
           <div class="feature-box">
             <img src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/img12.png" alt="Classroom Impact">
             <h3>Classroom Impact</h3>
