--- a/LandPage/apresentacao_LP.html
+++ b/LandPage/apresentacao_LP.html
@@ -267,9 +267,9 @@
 
         </div>
 
-<div style="margin-top: 2rem; text-align: center;">
+<div style="margin: 2rem auto; max-width: 720px; text-align: center;">
   <h4 style="color: #2F4F2F; font-size: 1.2rem;">Watch Joe Interact with Robot Samuel</h4>
-  <video width="100%" style="max-width: 720px; border-radius: 8px;" controls>
+  <video style="width: 100%; height: auto; border-radius: 8px;" controls>
     <source src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/Joe_and_Samuel.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
