--- a/LandPage/apresentacao_LP.html
+++ b/LandPage/apresentacao_LP.html
@@ -267,9 +267,9 @@
 
         </div>
 
-<div style="margin: 2rem auto; max-width: 500px; text-align: center;">
+<div style="margin: 2rem auto; max-width: 340px; text-align: center;">
   <h4 style="color: #2F4F2F; font-size: 1.2rem;">Watch Joe Interact with Robot Samuel</h4>
-  <video style="width: 100%; height: auto; border-radius: 8px;" controls>
+  <video id="samuelVideo" muted playsinline style="width: 100%; height: auto; border-radius: 8px;" controls>
     <source src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/Joe_and_Samuel.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
@@ -511,5 +511,26 @@
     /* default = English */
     showLang('en');
   </script>
+
+<script>
+  document.addEventListener('DOMContentLoaded', () => {
+    const video = document.getElementById('samuelVideo');
+    if (!video) return;
+
+    const observer = new IntersectionObserver((entries, obs) => {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          video.play().catch(e => {
+            // Alguns navegadores exigem que o vídeo esteja "muted" para autoplay
+            console.log("Autoplay blocked. Consider muting the video or prompting user.");
+          });
+          obs.unobserve(video); // toca só uma vez
+        }
+      });
+    }, { threshold: 0.5 }); // 50% do vídeo visível
+
+    observer.observe(video);
+  });
+</script>
 </body>
 </html>
