--- a/LandPage/apresentacao_LP.html
+++ b/LandPage/apresentacao_LP.html
@@ -99,6 +99,12 @@
       .hero img{max-width:300px}
       h1{font-size:2.2rem} h2{font-size:1.8rem}
     }
+
+/* ========== VIDEO CONTROLS FIX ========== */
+video::-webkit-media-controls {
+  opacity: 1 !important;
+  visibility: visible !important;
+}
   </style>
 </head>
 <body>
