--- a/LandPage/apresentacao_LP.html
+++ b/LandPage/apresentacao_LP.html
@@ -279,6 +279,9 @@ video::-webkit-media-controls {
     <source src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/Joe_and_Samuel.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
+<button onclick="unmuteVideo()" style="margin-top: 0.5rem; padding: 0.5rem 1rem; border: none; background: #4CAF50; color: white; border-radius: 4px; cursor: pointer;">
+  🔊 Click to Unmute
+</button>
   <p style="margin-top: 0.5rem; font-style: italic; color: #555;">
     Real classroom moment: AI guiding a student in pronunciation and grammar.
   </p>
@@ -537,6 +540,19 @@ video::-webkit-media-controls {
 
     observer.observe(video);
   });
+</script>
+
+<script>
+  function unmuteVideo() {
+    const video = document.getElementById('samuelVideo');
+    if (video) {
+      video.muted = false;
+      video.volume = 1.0;
+      video.play().catch(e => {
+        console.log("Playback blocked:", e);
+      });
+    }
+  }
 </script>
 </body>
 </html>
