--- a/LandPage/apresentacao_LP.html
+++ b/LandPage/apresentacao_LP.html
@@ -475,6 +475,20 @@ video::-webkit-media-controls {
             <p>Resultados concretos nos Learning Centers.</p>
           </div>
         </div>
+
+<div style="margin: 2rem auto; max-width: 340px; text-align: center;">
+  <h4 style="color: #2F4F2F; font-size: 1.2rem;">Assista o Joe interagindo com o Robô Samuel</h4>
+  <video id="samuelVideo" muted playsinline style="width: 100%; height: auto; border-radius: 8px;" controls>
+    <source src="https://hannahenglishcourse.netlify.app/carrossel/imagens/ingles/Joe_and_Samuel.mp4" type="video/mp4">
+    Seu navegador não suporta a tag de vídeo.
+  </video>
+  <button onclick="unmuteVideo()" style="margin-top: 0.5rem; padding: 0.5rem 1rem; border: none; background: #4CAF50; color: white; border-radius: 4px; cursor: pointer;">
+    🔊 Ativar Som
+  </button>
+  <p style="margin-top: 0.5rem; font-style: italic; color: #555;">
+    Momento real em sala: IA guiando o aluno na pronúncia e na gramática.
+  </p>
+</div>
       </section>
 
       <!-- TESTEMUNHOS PT -->
